--- a/src/app/components/analyze/analyze.component.html
+++ b/src/app/components/analyze/analyze.component.html
@@ -1,39 +1,5 @@
 <div class="analyze-container">
-  <div class="patient-section">
-    <h4 class="title-section">Sección del paciente</h4>
-    <section class="first-row">
-      <div class="item-row-large">
-        <div class="item--textbox">Paciente:</div>
-        <input type="text" class="input-block-large" disabled />
-      </div>
-      <div class="item-row-medium">
-        Sexo:
-        <input type="text" class="input-block-medium" disabled />
-      </div>
-      <div class="item-row-small">
-        Edad:
-        <input type="text" class="input-block-small" disabled />
-      </div>
-      <div class="item-row-large">
-        Dirección:
-        <input type="text" class="input-block-large" disabled />
-      </div>
-    </section>
-    <section class="second-row">
-      <div class="item-row-medium">
-        N Historia Clinica:
-        <input type="text" class="input-block-medium" disabled />
-      </div>
-      <div class="item-row-medium">
-        Condición del Paciente:
-        <input type="text" class="input-block-medium" disabled />
-      </div>
-      <div class="item-row-large">
-        Dpto./Prov./ Distrito:
-        <input type="text" class="input-block-large" disabled />
-      </div>
-    </section>
-  </div>
+  <app-patient-info></app-patient-info>
   <div class="analyze-info">
     <div class="diagnostic-symptom">
       <h4 class="title-section">Diagnostico</h4>
@@ -41,26 +7,10 @@
       <h4 class="title-section">Sintomas y Signos</h4>
       <div class="list-items">
         <div class="form-check" *ngFor="let symptom of activeSymptoms">
-          <input type="checkbox" class="form-check-input" [checked]="symptom.active" readonly/>
+          <input type="checkbox" class="form-check-input" [checked]="symptom.active" disabled/>
           <label class="form-check-label"> {{ symptom.description }} </label>
         </div>
-        <!-- <div class="form-check">
-          <input type="checkbox" class="form-check-input" />
-          <label class="form-check-label"> Piel pálida </label>
-        </div>
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" />
-          <label class="form-check-label"> Insomnio </label>
-        </div>
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" />
-          <label class="form-check-label"> Visión borrosa </label>
-        </div>
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" />
-          <label class="form-check-label"> Mareos </label>
-        </div>
-      </div> -->
+      </div>
     </div>
     <div class="results">
       <div class="percent-circle">
