--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,29 +1,28 @@
 <body>
-    <div class="login">
-        <span class="title">Iniciar Sesión</span>
-        <div class="card">
-            <div class="card-body">
-                <form (ngSubmit)="onSubmit()">
+    <div class="container">
+        <div class="card card-logo">
+            <div class="logo">
+                <img src="assets/logo.png" alt="">
+            </div>
+        </div>
+        <div class="card card-login">
+                <span class="title">Inicio de Sesión</span>
+                <form [formGroup]="formLogin" (ngSubmit)="onSubmit()" class="formulario" errorTailor>
                     <div class="input-group mb-3">
-                        <span class="input-group-text">
-                            <i class="bi bi-person-fill"></i>
-                        </span>
-                        <input type="text" class="form-control" placeholder="Usuario" [(ngModel)]="username"
-                            name="username">
+                        <span>Usuario</span>
+                        <input type="text" class="form-control" [(ngModel)]="username"
+                            name="username" formControlName="user">
                     </div>
                     <div class="input-group mb-3">
-                        <span class="input-group-text">
-                            <i class="bi bi-key-fill"></i>
-                        </span>
-                        <input type="password" class="form-control" placeholder="Contraseña" [(ngModel)]="password"
-                            name="password">
+                        <span>Contraseña</span>
+                        <input type="password" class="form-control" [(ngModel)]="password"
+                            name="password" formControlName="password">
                     </div>
                     <div class="btns">
-                        <button class="btn-login" type="submit">Iniciar Sesion</button>
+                        <button class="btn-login" type="submit">Iniciar Sesión</button>
                         <a class="forgot-pwd" href="">¿Te olvidaste tu Contraseña?</a>
                     </div>
                 </form>
             </div>
-        </div>
     </div>
 </body>
