--- a/src/app/components/incidence-admin/incidence-admin.component.html
+++ b/src/app/components/incidence-admin/incidence-admin.component.html
@@ -1,4 +1,8 @@
+
 <body>
+    <div class="container-newIndicence">
+        <button type="submit" class="btn-incidence" (click)="createIncidence()">Crear Nuevo</button>
+    </div>
     <div class="elemnts-search">
         <section class="left-elements">
             <mat-form-field appearance="standard">
@@ -50,4 +54,5 @@
             </tr>
         </table>
     </div>
+
 </body>
