--- a/src/app/components/incidence-admin/incidence-admin.component.css
+++ b/src/app/components/incidence-admin/incidence-admin.component.css
@@ -1,44 +1,64 @@
 body{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 91.5%;
-  }
-  
-  .elemnts-search{
-    display: flex;
-    justify-content: flex-start;
-    width: 70%;
-  }
-  
-  .left-elements{
-    width: 25%;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .title-section{
-    margin: 5px;
-  }
-  
-  .table-content{
-    background-color: bisque;
-    width: 70%;
-  }
-  
-  table {
-    width: 100%;
-    background-color: #ECF4FC;
-  }
-  
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
-  
-  .btn-view{
-    padding: 0;
-    border: none;
-    background: none;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 91.5%;
+}
+
+.elemnts-search{
+  display: flex;
+  justify-content: flex-start;
+  width: 70%;
+}
+
+.left-elements{
+  width: 25%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.title-section{
+  margin: 5px;
+}
+
+.table-content{
+  background-color: bisque;
+  width: 70%;
+}
+
+table {
+  width: 100%;
+  background-color: #ECF4FC;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+.btn-view{
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+.container-newIndicence{
+  margin-right: auto;
+  margin-left: 30vh;
+  margin-bottom: 5vh;
+  margin-top: 5vh;
+}
+
+.btn-incidence{
+  background-color: #04578B;
+  border:none;
+  color:  #A8F5F2;
+  padding: 10px 20px;
+  font-weight: bold;
+}
+
+tr.mat-header-row {
+  background-color: #2C3E50;
+  color: white;
+}
