--- a/src/app/components/analyze/analyze.component.css
+++ b/src/app/components/analyze/analyze.component.css
@@ -114,19 +114,6 @@ body {
     align-items: center;
 }
 
-.percent-circle{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120px;
-    width: 120px;
-    background-color: #04578B;
-    border-radius: 50%;
-    border: solid;
-    border-color: #BDF8F5;
-    font-size: 30px;
-    color: white;
-}
 
 .paragraph-container{
     margin: 30px;
@@ -192,3 +179,64 @@ footer{
     font-size: 20px;
     font-weight: bold;
 }
+
+
+/********************************/
+
+.circle-wrap {
+    width: 150px;
+    height: 150px;
+    background: #fefcff;
+    border-radius: 50%;
+  }
+  
+  .circle-wrap .circle .mask,
+  .circle-wrap .circle .fill {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    border-radius: 50%;
+  }
+  
+  .circle-wrap .circle .mask {
+    clip: rect(0px, 150px, 150px, 75px);
+  }
+  
+  .circle-wrap .inside-circle {
+    width: 122px;
+    height: 122px;
+    border-radius: 50%;
+    background: #2C3E50;
+    line-height: 120px;
+    text-align: center;
+    margin-top: 14px;
+    margin-left: 14px;
+    color: #ffffff;
+    position: absolute;
+    z-index: 100;
+    font-weight: 700;
+    font-size: 2em;
+  }
+  
+  /* color animation */
+  
+  /* 3rd progress bar */
+  .mask .fill {
+    clip: rect(0px, 75px, 150px, 0px);
+    background-color: #227ded;
+  }
+  
+  .mask.full,
+  .circle .fill {
+    animation: fill ease-in-out 3s;
+    transform: rotate(135deg);
+  }
+  
+  @keyframes fill{
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(var(porcentaje)deg);
+    }
+  }
