--- a/src/app/components/dialog-no-reference/dialog-no-reference.component.html
+++ b/src/app/components/dialog-no-reference/dialog-no-reference.component.html
@@ -1,4 +1,4 @@
-<div class="modal-body">
+<div class="body">
     <p mat-dialog-title>¿No desea referir?</p>
     <textarea class="input-text" rows="5" md-select-on-focus placeholder="Mensaje"></textarea>
     <mat-dialog-actions class="area-button">
