--- a/src/app/components/referrals/referrals.component.html
+++ b/src/app/components/referrals/referrals.component.html
@@ -149,7 +149,12 @@
       </div>
     </section>
   </div>
-  <footer>
-    <button type="checkbox" class="btn-send" (click)="onSend()">Enviar</button>
-  </footer>
+  <div class="botones">
+    <button type="submit" class="btn btn-regresar" (click)="onBack()">
+        Regresar
+    </button>
+    <button type="submit" class="btn btn-registrar" (click)="onSend()">
+        Enviar
+    </button>
+</div>
 </div>
