--- a/src/app/components/referred/referred.component.css
+++ b/src/app/components/referred/referred.component.css
@@ -6,17 +6,19 @@ body{
   height: 91.5%;
 }
 
-.elemnts-search{
-  display: flex;
-  justify-content: flex-start;
-  width: 70%;
-  margin-top: 10vh;
+.layouts{
+  display: inherit; 
 }
 
 .left-elements{
-  width: 25%;
-  display: flex;
-  justify-content: space-between;
+  margin-top: 10vh;
+  margin-bottom: 2vh;
+  width: 20%;
+  display: inline-flex;
+  align-items: baseline;
+}
+.mat-form-field-infix{
+  display: inherit;
 }
 
 .title-section{
@@ -35,6 +37,8 @@ table {
 .mat-form-field {
   font-size: 14px;
   width: 100%;
+  border-bottom: 1px solid black;
+  margin-bottom: 2vh;
 }
 
 .btn-view{
