--- a/src/app/components/referred/referred.component.html
+++ b/src/app/components/referred/referred.component.html
@@ -1,12 +1,10 @@
 <body>
-    <div class="elemnts-search">
         <section class="left-elements">
-            <mat-form-field appearance="standard">
-                <mat-label>DNI</mat-label>
-                <input matInput (keyup)="applyFilter($event)" placeholder="Ejm. 76871372" #input>
+            <mat-form-field class="layouts" appearance="standard">
+                <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input>
             </mat-form-field>
+            <i class="bi bi-search"></i>
         </section>
-    </div>
     <div class="table-content">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
