--- a/src/app/components/analyze/analyze.component.html
+++ b/src/app/components/analyze/analyze.component.html
@@ -13,17 +13,20 @@
       </div>
     </div>
     <div class="results">
-      <div class="circle-wrap">
-        <div class="circle">
-          <div class="mask full">
-            <div class="fill"></div>
-          </div>
-          <div class="mask half">
-            <div class="fill"></div>
-          </div>
-          <div class="inside-circle">{{ response.maxOutput.value * 100 | number: "1.2-2" }} %</div>
-        </div>
-      </div>
+      <circle-progress
+        [percent]= "response.maxOutput.value * 100"
+        [radius]="100"
+        [outerStrokeWidth]="16"
+        [toFixed] = "2"
+        [outerStrokeColor]="'#227ded'"
+        [innerStrokeColor] = "'#2C3E50'"
+        [animation]="true"
+        [animationDuration]="1500"
+        [showSubtitle]="false"
+        [unitsFontSize]="'40'"
+        [titleFontSize] = "'40'"
+        [titleFontWeight]="'bold'"
+      ></circle-progress>
       
       <div class="paragraph-container">
         <p>
