--- a/src/app/components/incidence-create/incidence-create.component.css
+++ b/src/app/components/incidence-create/incidence-create.component.css
@@ -25,7 +25,7 @@ h3{
     box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5);
     padding: 15px;
     margin-top: 10vh;
-    height:55vh;
+    height:65vh;
 }
 
 .element-container{
@@ -58,7 +58,6 @@ textarea {
 
 .asunto-container{
     width: 75%;
-    display: flex;
     justify-content: space-between;
 }
 
@@ -125,6 +124,7 @@ textarea {
     display: flex;
     justify-content: space-between;
     margin-top: 5vh;
+    margin-bottom: 5vh;
 }
 .btn-regresar{
     background-color: #946675; 
